--- a/src/app/number/number.component.css
+++ b/src/app/number/number.component.css
@@ -1,7 +1,10 @@
 .fullSize {
     width: 100%;
     height: 100%;
+    margin: 0%;
+    padding: 0%;
 }
-.fixWidth{
+
+.fixWidth {
     width: 100%;
 }
