--- a/src/app/number/number.component.css
+++ b/src/app/number/number.component.css
@@ -5,6 +5,15 @@
     padding: 0%;
 }
 
-.fixWidth {
+.fixInput { 
+    border-width: 1px;
+    border-style: solid
+}
+
+.fullWidth{
     width: 100%;
+}
+
+.error {
+    border-color: red;
 }
