--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<p>Exemple 1: basic usage</p>
-<app-number [(ngModel)]="phoneNumber1" [placeholder]="'+31881122334'"></app-number>
+<p>Exemple 1: basic usage nd search with country name</p>
+<app-number [(ngModel)]="phoneNumber1" [placeholder]="'+31881122334'" [searchField]="'name'"></app-number>
 <p>{{phoneNumber1}}</p>
 <br />
 
