--- a/src/app/number/number.component.html
+++ b/src/app/number/number.component.html
@@ -1,19 +1,33 @@
 <div class="container fullSize">
     <div class="row fullSize" #dropdown>
-        <div [ngStyle]="{width: widthDropdown, height: height}">
-            <kendo-dropdownlist [data]="data" [filterable]="true" [textField]="'name'" [valueField]="'countryCode'"
-                [(ngModel)]="selectedCountry" (filterChange)="handleFilter($event)" (valueChange)="updatephoneNumber()"
-                [ngStyle]="{ height: height}" class="fullWidth">
-                <ng-template kendoDropDownListItemTemplate let-dataItem>
-                     <span [class]="'flag flag-' + dataItem.countryCode"></span> &nbsp;
-                    <span>{{ dataItem.name }}</span> <span style="color: gray;">&nbsp; +{{ dataItem.dialCode }}</span>
-                </ng-template>
-            </kendo-dropdownlist>
+        <div [ngStyle]="{ height: height}">
+            <span class="input-group-addon flagInput">
+                <div class="dropdown"  (clickOutside)="onClickedOutside()">
+                    <button type="button" class="dropbtn btn" (click)="displayDropDown()" >
+                        <span [class]="'flag flag-' + selectedCountry.countryCode" *ngIf="selectedCountry"></span>
+                        <span class="defaultCountry" *ngIf="!selectedCountry"></span>
+                        <span class="arrow-down"></span>
+                    </button>
+                    <div class="dropdown-content" *ngIf="showDropdown">
+                        <input (input)="handleFilter()" [(ngModel)]="userInput" #searchInput> 
+                        <div class="list-group scrollable-menu">
+                            <a href="#" class="list-group-item"
+                                *ngFor="let country of data"
+                                (click)="updateSelectedCountry($event, country)"
+                                >
+                                <span [class]="'flag flag-' + country.countryCode"></span>
+                                <span class="country-name">{{ country.name }} <span class="dial-code">+
+                                        {{ country.dialCode}}</span></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </span>
         </div>
         <div [ngStyle]="{width: widthInput, height: height}">
             <input [(ngModel)]="phoneNumber" (focusout)="emit()" (keypress)="validateNumber($event)"
                 [placeholder]="placeholder" class="fullWidth fixInput" (blur)="onBlur()" (change)="changefn()"
-                [ngStyle]="{ height: height}" [ngClass]="{'error': !isValid && phoneNumber.length>0 }"/>
+                [ngStyle]="{ height: height}" [ngClass]="{'error': !isValid && phoneNumber.length>0 }"  #phoneNumberInput/>
         </div>
     </div>
 </div>
