--- a/src/app/phone-validator/phone-validator.component.css
+++ b/src/app/phone-validator/phone-validator.component.css
@@ -80,6 +80,7 @@
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1000;
+    margin-top: 10px;
 }
 
 .dropdown-content a {
