fix multi languge issue

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,3 +34,7 @@
 <p>Exemple 6: width change</p>
 <phone-validator [(ngModel)]="phoneNumber4"  [widthInput]="'40%'" [height]="'35px'"></phone-validator >
 <br />
+
+<p>Exemple 7: change Language</p>
+<phone-validator [(ngModel)]="phoneNumber5" [language]="'fr'" ></phone-validator >
+<br />
